# nsz-rs

./: .gitignore  Cargo.toml  README.md  nsz.py  pyproject.toml
.agent/: CONTINUITY.md
.agent/execplans/: INDEX.md
.agent/execplans/active/: EP-2026-02-22__nsz-rs-parity.md
.github/workflows/: rust.yml
docs/plans/: 2026-02-22-nsz-rs-parity-design.md  2026-02-22-nsz-rs-parity-implementation.md
python/nsz/: ParseArguments.py  __init__.py
src/: config.rs  error.rs  lib.rs  python.rs
src/container/: hfs0.rs  mod.rs  nca.rs  nsp.rs  pfs0.rs  xci.rs
src/crypto/: keys.rs
src/fs_ops/: existing_checks.rs  mod.rs  path_tools.rs
src/ncz/: block_reader.rs  compress.rs  decompress.rs  header.rs  mod.rs
src/ops/: compress.rs  create.rs  decompress.rs  extract.rs  mod.rs  titlekeys.rs  undupe.rs  verify.rs
src/parity/: python_runner.rs
tests/: compress_cli_path.rs  compress_native_nsz_xcz_op.rs  compress_xci_parity.rs  config_defaults.rs  container_roundtrip.rs  decompress_native_ncz_op.rs  decompress_native_nsz_op.rs  decompress_native_xcz_op.rs  decompress_verify_parity.rs  error_contract.rs  fs_policy.rs  keys_loading.rs  misc_ops_parity.rs  ncz_crypto_roundtrip.rs  ncz_decompress_meta.rs  ncz_header_block.rs  ops_misc_cli_path.rs  parity_python_version.rs  perf_compare_python.rs  smoke_public_api.rs  verify_native_nca_op.rs  verify_native_ncz_op.rs  verify_native_nsp_nsz_op.rs  verify_native_xci_xcz_op.rs
