[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "nsz"
version = "4.6.1.post1"
description = "Rust-backed compatibility layer for nsz"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "nsz-rs contributors" }]

[project.scripts]
nsz = "nsz:main"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "nsz._native"
